* Startup.cs: * Startup.cs: * Startup.cs: * _Imports.razor: * _Imports.razor:
* _Imports.razor: communication service now takes department name as
  parameter.
add sharedlibrary to department imports

--- a/Finance/_Imports.razor
+++ b/Finance/_Imports.razor
@@ -8,6 +8,7 @@
 @using Microsoft.JSInterop
 @using Finance
 @using Finance.Shared
-@using Finance.Services
+@using SharedLibrary.Services
+@using SharedLibrary.Data
 @using Finance.Data
 @using Microsoft.Extensions.Configuration
