--- a/Logistics/_Imports.razor
+++ b/Logistics/_Imports.razor
@@ -8,6 +8,7 @@
 @using Microsoft.JSInterop
 @using Logistics
 @using Logistics.Shared
-@using Logistics.Services
+@using SharedLibrary.Services
+@using SharedLibrary.Data
 @using Logistics.Data
 @using Microsoft.Extensions.Configuration
