--- a/HumanResource/_Imports.razor
+++ b/HumanResource/_Imports.razor
@@ -8,6 +8,7 @@
 @using Microsoft.JSInterop
 @using HumanResource
 @using HumanResource.Shared
-@using HumanResource.Services
+@using SharedLibrary.Services
+@using SharedLibrary.Data
 @using HumanResource.Data
 @using Microsoft.Extensions.Configuration
