--- a/CentralServer/Shared/NavMenu.razor
+++ b/CentralServer/Shared/NavMenu.razor
@@ -13,13 +13,18 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="logging">
+                <span class="oi oi-plus" aria-hidden="true"></span> Logging
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="registration">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Registration
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="events">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Events
             </NavLink>
         </li>
     </ul>
