--- a/Finance/Shared/NavMenu.razor
+++ b/Finance/Shared/NavMenu.razor
@@ -12,6 +12,29 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="assetmanager">
+                <span class="oi oi-home" aria-hidden="true"></span> Assert Manager
+            </NavLink>
+        </li>
+
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="balancesheet">
+                <span class="oi oi-home" aria-hidden="true"></span> Balance Sheet
+            </NavLink>
+        </li>
+
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="taxmanager">
+                <span class="oi oi-home" aria-hidden="true"></span> Tax Manager
+            </NavLink>
+        </li>
+
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="pnlreport">
+                <span class="oi oi-home" aria-hidden="true"></span> Profit and Loss Report
+            </NavLink>
+        </li>
     </ul>
 </div>
 
