--- a/HumanResource/Pages/HRInfo.razor
+++ b/HumanResource/Pages/HRInfo.razor
@@ -1,5 +1,14 @@
-﻿<h3>Component1</h3>
+﻿@page "/hrinfo"
 
-@code {
+<div class="container">
+    <h2>HR Information and Policies</h2>
 
-}
+    <ul>
+        <li><a href="#">Company Handbook</a></li>
+        <li><a href="#">Employee Benefits Summary</a></li>
+        <li><a href="#">Code of Conduct</a></li>
+        <li><a href="#">Leave Policy</a></li>
+    </ul>
+
+    <p>Contact HR Department for any questions about policies</p>
+</div>
