--- a/HumanResource/Shared/NavMenu.razor
+++ b/HumanResource/Shared/NavMenu.razor
@@ -1,5 +1,5 @@
 ﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">HumanResource</a>
+    <a class="navbar-brand" href="">HR Department</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -9,7 +9,42 @@
     <ul class="nav flex-column">
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
+                <span class="oi oi-dashboard" aria-hidden="true"></span> Dashboard
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="employees">
+                <span class="oi oi-people" aria-hidden="true"></span> Employees
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="interns">
+                <span class="oi oi-person" aria-hidden="true"></span> Interns
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="pensioners">
+                <span class="oi oi-person" aria-hidden="true"></span> Pensioners
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="departments">
+                <span class="oi oi-home" aria-hidden="true"></span> Departments
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="disciplinary">
+                <span class="oi oi-warning" aria-hidden="true"></span> Disciplinary Cases
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="hrinfo">
+                <span class="oi oi-info" aria-hidden="true"></span> HR Information
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="communication">
+                <span class="oi oi-chat" aria-hidden="true"></span> Communication
             </NavLink>
         </li>
     </ul>
