--- a/Logistics/_Imports.razor
+++ b/Logistics/_Imports.razor
@@ -10,5 +10,5 @@
 @using Logistics.Shared
 @using SharedLibrary.Services
 @using SharedLibrary.Data
-@using Logistics.Data
+@using SharedLibrary.Data.Logistics
 @using Microsoft.Extensions.Configuration
